src/Ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api-ingress
  namespace: api
spec:
  rules:
  - http:
      paths:
      - path: /api/poi/healthcheck
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
      - path: /api/user/healthcheck
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 80
      - path: /api/user-java/healthcheck
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 80
      - path: /api/trips/healthcheck
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
